<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Merkado</string>

    <!--GENERAL USE-->
    <string name="confirm">CONFIRM</string>
    <string name="update">UPDATE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="sell">SELL</string>

    <!--INPUT WARNINGS-->
    <string name="warning_input_email">Input email!</string>
    <string name="warning_input_password">Input password!</string>
    <string name="warning_email_not_registered">Email was not registered. Please sign up.</string>
    <string name="warning_incorrect_password">Incorrect password!</string>
    <string name="warning_this_item_cannot_be_sold">This item cannot be sold!</string>

    <!-- LOBBY STRING VALUES -->
    <string name="lobby_sign_in_requirement">Sign in to join economy</string>
    <string name="lobby_empty">The economy\'s empty here</string>

    <!--STORY STRING VALUES-->
    <string name="qasListEmpty">You have no %s today!</string>

    <!--STORE STRING VALUES-->
    <string name="open_store_popup_header">Store Setup</string>
    <string name="open_store_popup_first_time">Greetings, Merkadian! A prime market stall has just become available, and it\'s calling your name! Claim it now, start your shop, and pave your way to success!</string>
    <string name="open_store_popup">Greetings, Merkadian! Your old market stall is still available and calling you back! Claiming it now will temporarily close your factory. Weigh your options and choose the path that best fits your town\'s needs!</string>
    <string name="storeItemListEmptySeller">You\'re not selling any%s. Add some!</string>
    <string name="storeItemListEmptyConsumer">No %s being sold today!</string>

    <!--FACTORY STRING VALUES-->
    <string name="open_factory_popup_header">Factory Setup</string>
    <string name="open_factory_popup_first_time">Greetings, Merkadian! An empty factory is waiting for you to make it roar! Claim it now, start generating resources, and set yourself on the path to greatness!</string>
    <string name="open_factory_popup">Greetings, Merkadian! Your factory is ready to roar back to life! Claiming it now will temporarily close your market stall. Weigh your options and choose the path that best fits your needs!</string>

    <!--FACTORY CHOICE-->
    <string name="choose_a_job">Choose a job</string>
    <string name="food_factory">Food Factory</string>
    <string name="manufacturing_factory">Manufacturing Factory</string>

    <!--FACTORY BOOSTER-->
    <string name="x">x</string>
    <string name="forward_slash">/</string>

    <!--APP UPDATE-->
    <string name="app_update">App Update</string>
    <string name="app_update_contents">There is a pending update to Merkado. Please update the app and restart.</string>

    <!--CREATE ECONOMY-->
    <string name="change_image"><u>Change Image</u></string>
    <string name="dot">.</string>
    <string name="create_economy_agreement">By clicking "Create Server," you agree to the</string>
    <string name="create_economy_agreement2"><u>Terms and Conditions</u></string>
    <string name="create_server_header">Create Server</string>

    <!--CONTENT DESCRIPTIONS-->
    <string name="food_factory_bg">FOOD FACTORY BG</string>
    <string name="manufacturing_factory_bg">MANUFACTURING FACTORY BG</string>
    <string name="map_house">MAP HOUSE</string>
    <string name="map_factory">MAP FACTORY</string>
    <string name="map_store">MAP STORE</string>
    <string name="store_icon">STORE ICON</string>
    <string name="image_container">IMAGE CONTAINER</string>
    <string name="lock_icon">LOCK ICON</string>
    <string name="filter_overlay">FILTER OVERLAY</string>
    <string name="icon">ICON</string>
    <string name="server_image">SERVER_IMAGE</string>
    <string name="qasListNull">Cannot generate list for your %s at the moment. Please try again later.</string>
    <string name="desc_sensiv_fac">Sensitivity Factor affects how much the item prices is affected by inflation. The higher the sensitivity, the higher the variation in prices will be once inflation rate changes.</string>
    <string name="desc_prepo_test">Checking the Pre-test and Post-test feature enables the server to conduct tests in the beginning and end of the game. You, the server owner, can see the test results of each player.</string>
    <string name="desc1_prepo_test">This is enabled during the beta testing in order to test the student’s ability to learn using this app. This can be disabled in the official release.</string>
    <string name="desc_bot_removal">Bot Removal affects when the bot is removed from the store or factory, based on a percentage of players needed to manage it. This percentage is applied to the maximum number of players allowed on the server.</string>
    <string name="objective">Objective</string>
    <string name="background">BACKGROUND</string>
    <string name="booster_name">Booster Name</string>
    <string name="to_symbol"><![CDATA[>>]]></string>
    <string name="level">Level</string>
    <string name="requirements">Requirements:</string>
    <string name="back">BACK</string>
    <string name="on_production">On Production:</string>
    <string name="resource">RESOURCE</string>
    <string name="products">Products:</string>
    <string name="gui">GUI</string>
    <string name="server_settings">Server Settings</string>
    <string name="sensitivity_factor">Sensitivity Factor:</string>
    <string name="range0_1">0.01</string>
    <string name="range0_9">0.9</string>
    <string name="bot_removal">Bot Removal:</string>
    <string name="percentage">%</string>
    <string name="pre_test_and_post_test">Pre-Test and Post-Test</string>
    <string name="percent_10">10%</string>
    <string name="percent_20">20%</string>
    <string name="percent_30">30%</string>
    <string name="percent_40">40%</string>
    <string name="percent_50">50%</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="read">Read</string>
    <string name="server_id">Server ID:</string>
    <string name="server_key">Server Key:</string>
    <string name="join_a_server">Join a Server</string>
    <string name="server_id_2">Server Id</string>
    <string name="server_key_2">Server Key</string>
    <string name="need_to_create_a_server">Need to create a server?</string>
    <string name="create_server">Create Server</string>
    <string name="quantity">Quantity:</string>
    <string name="image_button">IMAGE BUTTON</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="settings">SETTINGS</string>
    <string name="stores">Stores</string>
    <string name="preview">Preview</string>
    <string name="store_is_closed">Store is closed.</string>
    <string name="go_to_store">Go to Store</string>
    <string name="purchase">Purchase</string>
    <string name="choose_a_product_to_view_its_details">Choose a product to view its details.</string>
    <string name="cost">"Cost: "</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="mga_layunin">Mga Layunin:</string>
    <string name="click_anywhere_to_continue">✧ Pumindot sa kahit saan upang magpatuloy ✧</string>
    <string name="app_update_contents_2">The updated version of Merkado is currently being downloaded. Please be patient until the download is complete. Once finished, install the new APK to update the app. After the update, restart Merkado to enjoy the latest features and improvements.</string>
    <string name="initial_price">0.00</string>
    <string name="market_price">Market Price:</string>
    <string name="no_chosen_item">No chosen item.</string>
    <string name="inventory">Inventory</string>
    <string name="use">Use</string>
    <string name="items">Items:</string>
    <string name="add_item">Add Item</string>

</resources>