<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="180dp"
    android:backgroundTint="@color/merkado_orange_light"
    app:cardCornerRadius="25dp"
    app:strokeColor="@color/merkado_orange"
    app:strokeWidth="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/header"
            android:text="@string/open_factory_popup_header"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/factory_setup_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text"
            android:text="@string/open_factory_popup_first_time"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/factory_setup_cancel"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="4sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/elements"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.capstone.merkado.CustomViews.WoodenButton
                android:id="@+id/factory_setup_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:buttonMode="shortSign"
                app:buttonState="idle"
                app:buttonText="@string/confirm"
                app:changeSpeed="fast" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>