<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/merkado_orange_transparent"
        android:elevation="2dp"
        android:fontFamily="@font/header"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/choose_a_job"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/food_factory_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/food_factory_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/logo"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowRadius="10"
                    android:text="@string/food_factory"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.capstone.merkado.CustomViews.WoodenButton
                    android:id="@+id/food_factory_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    app:buttonMode="mediumSign"
                    app:buttonState="idle"
                    app:buttonText="Confirm" />
            </LinearLayout>

            <View
                android:id="@+id/food_factory_darken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".3"
                android:background="@color/black"
                android:elevation="2dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/food_factory_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_food_factory" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manufacturing_factory_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/manufacturing_factory_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/logo"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowRadius="10"
                    android:text="@string/manufacturing_factory"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.capstone.merkado.CustomViews.WoodenButton
                    android:id="@+id/manufacturing_factory_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    app:buttonMode="mediumSign"
                    app:buttonState="idle"
                    app:buttonText="Confirm" />
            </LinearLayout>

            <View
                android:id="@+id/manufacturing_factory_darken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".3"
                android:background="@color/black"
                android:elevation="2dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/manufacturing_factory_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_manufacturing_factory" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>