<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mai_main_menu"
    tools:context=".Screens.Game.Store.Stores">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/merkado_orange"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/gui_back_button"
            android:contentDescription="@string/icon" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon_store" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/header"
            android:gravity="center"
            android:text="@string/stores"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_transparent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <!-- LIST -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stores_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdgeLength="20dp"
                android:orientation="horizontal"
                android:requiresFadingEdge="horizontal"
                tools:listitem="@layout/item_gam_sto_stores_stores_grid" />
        </LinearLayout>

        <!-- DESCRIPTION -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/bg_solid_color_with_shadow"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/header"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/show_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text"
                    android:text="@string/preview"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/store_product_preview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fadingEdgeLength="20dp"
                    android:orientation="horizontal"
                    android:requiresFadingEdge="horizontal"
                    tools:listitem="@layout/item_gam_sto_stores_product_preview" />
            </LinearLayout>

            <TextView
                android:id="@+id/show_products_none"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/store_is_closed"
                android:fontFamily="@font/text"
                android:textColor="@color/light_gray"
                android:gravity="center"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/go_to_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/merkado_blue"
                app:cardCornerRadius="999dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/elements"
                    android:text="@string/go_to_store"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>